Fixed gap between banner and nav bar

--- a/app/assets/stylesheets/banner.css
+++ b/app/assets/stylesheets/banner.css
@@ -1,15 +1,6 @@
-#banner_container {
-  height: auto;
-  margin-bottom: -10px;
-  padding-bottom: 0;
-  line-height: 0;
-  background-color: #af2323;
-}
-
 #banner-image {
   max-width: 100%;
   max-height: auto;
-} 
-
-
+  display: block;
+}
 
